Bug 257024 - [WebGPU] Incorrect default value for GPUPrimitiveState.topology
Summary: [WebGPU] Incorrect default value for GPUPrimitiveState.topology
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-19 06:31 PDT by Tadeu Zagallo
Modified: 2023-05-22 01:34 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-05-19 06:31:19 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-05-19 06:31:43 PDT
<rdar://problem/109564272>
Comment 2 Tadeu Zagallo 2023-05-19 06:36:41 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14074
Comment 3 EWS 2023-05-22 01:34:47 PDT
Committed 264318@main (3aa8c01094ba): <https://commits.webkit.org/264318@main>

Reviewed commits have been landed. Closing PR #14074 and removing active labels.