[WebGPU] Incorrect default value for GPUPrimitiveState.topology https://bugs.webkit.org/show_bug.cgi?id=257024 rdar://109564272

Reviewed by Myles C. Maxfield.

Although the IDL has the correct default value, while converting between
PAL::WebGPU::RenderPipelineDescriptor and WGPURenderPipelineDescriptor,
we set the topology to `point-list` when not explicitly specified.

* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUDeviceImpl.cpp:
(PAL::WebGPU::convertToBacking):

Canonical link: https://commits.webkit.org/264318@main